--- a/classwork/tetris/templates/index.html
+++ b/classwork/tetris/templates/index.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="game-board">
-                <canvas id="tetris" width="360" height="720"></canvas>
+                <canvas id="tetris" width="250" height="500" style="width: 250px; height: 500px;"></canvas>
             </div>
 
             <div class="game-info right-panel">
