--- a/classwork/tetris/templates/index.html
+++ b/classwork/tetris/templates/index.html
@@ -84,6 +84,7 @@
             </div>
         </div>
     </div>
+    <script src="{{ url_for('static', filename='js/tetrisAI.js') }}"></script>
     <script src="{{ url_for('static', filename='js/tetris.js') }}"></script>
 </body>
 </html>
