--- a/classwork/tetris/templates/index.html
+++ b/classwork/tetris/templates/index.html
@@ -79,12 +79,16 @@
                             <span class="key">C</span>
                             <span class="action">Hold Piece</span>
                         </div>
+                        <div class="key-bind">
+                            <span class="key">A</span>
+                            <span class="action">Algorithm Move</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='js/tetrisAI.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/tetrisAlgorithm.js') }}"></script>
     <script src="{{ url_for('static', filename='js/tetris.js') }}"></script>
 </body>
 </html>
